--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -1,23 +1,1 @@
-// Add typefaces here.
-// Add weight and style details too.
-// ! Set cap height to set to the baseline.
-$bodytype: (
-  font-family: 'Georgia, serif',
-  regular: 400,
-  bold: 700,
-  italic: italic,
-  cap-height: 0.66
-) !default;
-
-$headingtype: (
-  font-family: 'Helvetica, sans-serif',
-  regular: 400,
-  bold: 700,
-  cap-height: 0.66
-) !default;
-
-$monospacetype: (
-  font-family: 'Menlo, monospace',
-  regular: 400,
-  cap-height: 0.68
-) !default;
+$body-font-family: Georgia, serif;
